fix plex deployment

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:pYUcWE/zQNretMnBeDuMKLnvcltVyTKP7vbuL2F59o3Rgr/k9aiWGiop8KLT7XvQbNLoE3byRxkoHDv7k6HcTT0=,iv:LNn8M4LxSFax0FjV6dn8zWzMkuAg6H+P1o4bujo48ZQ=,tag:QsivgcW9urWHj3kIx6oXGQ==,type:comment]
-#ENC[AES256_GCM,data:soxKq864BNjcUGGJY27FOE3WV6lUVBC99mSchqfWuCvi5eVgpILAxGH7LR0=,iv:E7SdY8+DveaILw8hmfqeHrx8LCWM8fpdcC1ttw7FrNU=,tag:yXgipyVBubCCKHUf2IukTw==,type:comment]
-VIP: ENC[AES256_GCM,data:VGXUIGAbYllTjYUXsg==,iv:8uMJ1nseYY1tQCHWesyknRdynlAZkVyw6fKCECPnvsY=,tag:1H0MHs7w+6QxQl5MtVyW0w==,type:str]
-#ENC[AES256_GCM,data:p8mS8N+0SIectbxFapsOZ0acUoKXNzCvJ+lZ,iv:+0ZWjUZq4r9VrBazURzek6qrDSHMvHpH8D61+gbg5uw=,tag:35j+1gnpDQvNFknTjZ1PxQ==,type:comment]
-#ENC[AES256_GCM,data:8Tw9qknOZZ6wn78OIS8DBEJW+RxDq/f4OPwZYKj+b9d5CzwE+3bryAnVnpg9oGqP0gkfX7erDy5nU4rcwIQ6drsMHUuLgilf2MkL1cOMuUFNpE6b7xgfIVY=,iv:JveSOOr4goEo94d1Av57LHTrggiNAUyxh5n+jqRMCT8=,tag:OZ2infoS2UE3XGfOOKa3dA==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:Crh9n/fRDQlWZoXnlNo=,iv:alF3/9HeDNblu46SewxcawY9uwMItszj6cj11x/lCH8=,tag:7BUCg12QN/YLVsrmi4Mn2g==,type:str]
-#ENC[AES256_GCM,data:TVuvZAdhYakd0TRTkAwPI5EmQlCAiYFMZw8ztt3jAI+3/w==,iv:bhnROyjhaMr+P+5bskiMoI9KYckApw/2nmmM+Th9OJk=,tag:gAW3XpU3uNmyvBvNo327hg==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:GWvEVCb3+tl4UlOqfw==,iv:EU//agUXctJiOj7VFkjrCZ73HOUoJwdqx/DswvmG5JQ=,tag://y1iSyUatV69udW5EzAnA==,type:str]
-#ENC[AES256_GCM,data:DbYWZre9v7DB2TKC1RYZQLn/VuJs4cwMmQTG04EgwWF0CZXFLtRVoCqdQAVfr24=,iv:FVSOQqTb45Lowq7a0Z8Uo67WNYXy/rX102SZAFX9ZGg=,tag:KHA91wwomGnlI74WRPHh8g==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:Cott6ASr0cGihBsRPxrn7wIYKEBiOzQjTME0eAz9Pg==,iv:AK6tH0X8XpB02c5dzCkEj0nC4PlO9TuOaBztkhU7620=,tag:gVSeKhcKznNxDQhhkYNrhw==,type:str]
-#ENC[AES256_GCM,data:2iX736HK9kooR5/+/BX4KAJGmj2li2RP6KjN3cf+puuUPmdxifz4otKyIqmpDiO/Bfhu7JqJi1NIig7n33WKW4D67kiPOlAc5FNOmkTQTpsykA==,iv:ybd58zIGPmlz9iEjn4Sb8hkOhEmthwzPNIFiox4UA0I=,tag:nlVRApQsZT6dUShyP6wtbw==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:i6a2h7bDKnqM3s4GPaia,iv:V+oGwH/ZVCuiotY5yu5o79HZAddP/CoEHI/kvQWVn/E=,tag:oywMxbQDS7gXuGrLar/Z0Q==,type:str]
-#ENC[AES256_GCM,data:338l3wTiBkCwi12IIQueZ8Q3BpAU5sggGta8uYzGZFO4,iv:tIlNhjUXEAO5PjHZ+Bi16E6+pMAYZ9Kqg/15Lh+xb2M=,tag:aNpVbo8jik6294VuHw4u9A==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:b+LnGcdU26ZhSsTpAjFS,iv:wA2A2+zcK+64Pb3fIKdo/n+R6bIuoWfiXhLxFfsHbLo=,tag:MzZlGeZWN/zbfWr58jUC3Q==,type:str]
-#ENC[AES256_GCM,data:GQR3eB0DqmE5f8DQ4lwRnUGy5/xMyHp4jArHlxp5davW2nPHgyejNRfQ4BbjssSrbXaB4C4PTUGhKyiX5hQXKtcBMJYkoz5Es0rP9vo6T+M=,iv:P5DopFd5H1O4ldOWDyT9d5XsG9LQeR6li71ltYwiv5g=,tag:1C/X3Kqx2W7VITNuON+Hdw==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:pwHpKR5/Qu5a7PUMDm4u,iv:KtWa9xDvpEGqnHITz6r9/gcicHDFBB7LV2mZDPNn8Yk=,tag:gNSOP6tVjMk4bANU2GgHCg==,type:str]
-#ENC[AES256_GCM,data:ddByYliyNEKXDq3MECDDRBPb7MIjktQ863VhPese52C8GViICKHZrqV7dGf8EDnk6V/VHWISyv+bZcUlhLRlKSVh5QrdrVc4RX5+3Yzc6gNzrLXJKDXW,iv:IcGoxHjb9SO8iNplJcXUDa4YTD29548qJ/0OxRabUVA=,tag:o0mT5FihbDlXD9Yt5qN4HQ==,type:comment]
-#ENC[AES256_GCM,data:B49+XVkgwWpIVwLSWwLV/o/hDMKdFKfR1RFxNqSGJOxYKQWNJl5RrtJ8WRE7oZdR7jC1p7SkUSXnpP9rInZkum4Yh7obhFtEzepiMp0EnblNgFqrFBUf7gOV9Un1w4to62Ik0tZJ1OrPlx3whoWeLOBs/xFiuOiY5eyoBQ==,iv:9IIJHgWbRVKASbW5Y/E6hnLiKhjAGrBhHSBoOoG79CA=,tag:ymHoMXVjZXzAGsf53Gl9aQ==,type:comment]
-#ENC[AES256_GCM,data:h81m7G1441HDDg5u8vu1P4ClouVt7B+CsROwy7cA+TdLh8lQFrCXmja9UVf88BH/69MAkjp1mm5sLJoCIpBBVEnFeaWW9/DR7mvhxwJhU1c=,iv:+ZFQtfTq568kU7O+2zch0whXIJBXyTVWO1caNx3mapI=,tag:dFcGAS9lEuk0zZ/XJDjbtw==,type:comment]
-#ENC[AES256_GCM,data:EEBEHyqz2j7in4jpRBFZVGqGzWepAAIWdMey+/IeUrSOGqvmJrVb2QymMyewlgSZLE8eGNV7,iv:w67YiAShtYy22urHiNy7tsaeEHikaOnKczhERrZNjXU=,tag:h9rxSfYc67ONHMRONAugIg==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:1IZ44urp4qIlHa/Z,iv:LAr0sdb4bXmprXqkbs4aRS95FOtrpv7g4RTz3RUaVxc=,tag:DunuqdBXY4dwmvA8BGA+EQ==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:z4kPpHyVBStrL2WdgVxTtoA=,iv:jqopqbx6eTOIdY2iTt6v0oJdlkA/5zsOTu3c01lbchs=,tag:AvDzMP4cgLiBJYSVbf3EIA==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:LWuhPGY/RBX3rk89LN4GLWCFg1+pPWMm6Rna0v+x8dA=,iv:Bsgm4JpUPO8h4+cm7uRoc7STnSSeqTCWXvVE6+l503E=,tag:Gxclj1TUEvQJaW+tgVPhtw==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:0RPusXwpTfN4xLcjJ4XTt3INaOqUWkF/U2ocO13/QuoSN7W0P0hesA==,iv:+5YgZ0hWjjnnLBFvRBtnEDb6uNcA9gJfc/APpQQY5d4=,tag:b8SIn0GJ6F7LX2skaT4rdw==,type:str]
-#ENC[AES256_GCM,data:CUIDZW/wmGpe+SGZDnNiRHWlrcZi/84BekJ7Axjc46OErPE/H7iq38lXcf2mhht4omqF0m135JpoJY5iyJ37aA==,iv:+ieqTq2IopPLx2lmPQfOhvatEmJc2OMf8tOlJAIMweM=,tag:qSZO/raA9kUe8x3x2LVW4w==,type:comment]
-#ENC[AES256_GCM,data:0jIwhMc7/dx2YhfcoNO2YGoYgpC33Hjp02kLYBShOPaOTvYh0I23RkQBYC8OKL+D/A6zfH2ei7E=,iv:S2nogdiT6AdUMvl58VFE7OUJykBUA5xvmJAu+kpJ/Gc=,tag:f8ELe2gqDM0TuelptVzuog==,type:comment]
-#ENC[AES256_GCM,data:+o30itxhN60o5GX1Y2cmg5YMP6SYKQe72Q==,iv:YfyLbTUKGq4nobMw1nJgkyHKGZlT1i3SVWwyzcOvsmk=,tag:QiKRVlRYW4RxN+8HQ2olQQ==,type:comment]
-#ENC[AES256_GCM,data:KYIUF0QB4buwzb1pAPSWXCXtjPRNTlG0ztPK9CpdKIV8Z431ESutNNouCkwzzDsbrxTVMubq7CBLgQLzUqHv338z+FTSiBkvHPKdyCU=,iv:+92OIZViJ1PWG+i6FOpKz8l2fnPLwquNaktP154qQyA=,tag:I9MvZT3t5PX2TPvg5IZTCA==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:MhdevvhEBNv0PQhdKBeoWXN+jrRKWp9KU9QiyEqvgigaz+m6q4cQW60qR0rHuU3n,iv:nvHm9Wrvclwx5j3p74KLAVdVo8xPyKBOHh6UL06B+/U=,tag:9iWIjTFJBtlTAhjY+DJ5DQ==,type:str]
-#ENC[AES256_GCM,data:8TMGBLmtRjI3bl16K3rqkT6eeB8cDvdO1Jh4GabD1XpTA5IRMb8LI+7UvQkjIINFX+cgWAEj1qeFY4e0HOybqrLcTZXv4fs=,iv:Ba3WVGQ5YmecGQkDvwk+oIgOVFyvbJWQ+KakrHG10xs=,tag:19t7KVaDqtsnthGzrthcDg==,type:comment]
-#ENC[AES256_GCM,data:V1HhBhSlG+wDTLVS7L6+A68KCGgCNygsNMj0/iIn6hbFz3GEwjVLE35IzL9NS32qW6OxfCsE,iv:+QbCxnTHpWeHHmYBY29xcaF2hUDAGhSHXRaxE/Qpoyg=,tag:azGGnGTIYUm984KHC42Gyw==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:LRcCE0zHcA==,iv:DFVVkssNevSt/pDC3Lk1Iqt0x3LFuj3xuuu1kN/6Nyg=,tag:VqY762FHo2vyN2uz13lBHA==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:OlCajNHn9Zbsry4Wt+x1Wqdq3f8=,iv:tR6ibzBjiuafc0I/lheGeEsNYj7/HxRUn92nfRXkz+Q=,tag:W9LxFWi9yM29uo3afi/hEg==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:SYJXEWGWbmZTsRk=,iv:YkssP9YjXd5J76uuhL5iuamwHPKBDkL2pxilxc0Eftc=,tag:lWVvWklTEowK6bQ1a+RA+A==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:tqgJP/sHTNK6eOTO8CNM,iv:k237GA0UUYf2Okiyf2nvSUbrFQai2TjPq8Z3zo+BIJQ=,tag:GZV98dk6dRTLA7TCwHfqPg==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:LFs8PCoXuFXJUpdxI9Dc8aG9IcvnuY8Xeg==,iv:hei3V1n349NrZvaxnF0glgLsUx9alkYqamE+ASozgd4=,tag:J/jcewFpvcJt04Xjlp0Nvw==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:l/wuBcVQirnWnFiNpaHNx2QmXLtNF1BJ,iv:EJbtfxY2Ke7IDstQfa9RISqwi07A5gDODh27NFRopxM=,tag:uFtv9ONQ2+olvaQOHvw1MQ==,type:str]
-#ENC[AES256_GCM,data:ZMpoDpCFIH7ycwBTAEkZpJNk3gpFKJquR4WcXu22rXT83L0xi7U=,iv:th0EWmxRUV3zG/SMbWal7/AB+LH1n4iFQTyHqahE0LA=,tag:nn5IF3gXxStZdY4gcplT+A==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:IT8WAMx5UVZtAv01cJOu4OmOf4g=,iv:AeO2HqONuM4vNIGEXTlpTNQHVVk8nsfL5AxSghXB6RE=,tag:LNgb4zSKx/9UhQExdA2B9g==,type:str]
-#ENC[AES256_GCM,data:jIztMpBSFxVhiKaX0Vk=,iv:5HC/iG7SiRy8meK2jVQSgyJqnGgDqMh0Uk2tOg2cssk=,tag:LUOApv2pONKSMVgDmc26tw==,type:comment]
-PODNET: ENC[AES256_GCM,data:LivEwPLUFWhprpQjLA==,iv://9pxSHL0yFHEheslxmn0ZQK6/XSB8gcZH0dVBwtXec=,tag:lkwlqxp4dQV4ANjRTsMt7A==,type:str]
-SVCNET: ENC[AES256_GCM,data:E29YoksONVrVdjEGmQ==,iv:ngvLtIriLDjwM8fDO4+8lvtJcy10WDEez+dHGGfjWlg=,tag:JFf17ZMS1suTy1mp9+J/oQ==,type:str]
+#ENC[AES256_GCM,data:w8SV8SGvr2TIsCrV7COHUp8JSLUFCpAPlYlRKXpvnZpEaW5fEavBNzsFzymwGkSnX1O9o+2wu3D+KR2Ah5XOPfI=,iv:aoTulxj1c6Gp2dFXW9xj3O7iDgwhRWWk5zIP5prS210=,tag:2JQ754/OtHPouE1UrAL2OQ==,type:comment]
+#ENC[AES256_GCM,data:Dc6YGBj+PzKMb5MSZxgCTDrlfHQmMpX6jzCstESWAFN3uhX3dYjahv1HnOo=,iv:cBRh9ovp2K62jUDj/ThSUaJ4CmwB3Q+9LfwB/XDTbcg=,tag:KUmlNtV/xxTBP59DTvAtZg==,type:comment]
+VIP: ENC[AES256_GCM,data:K1kvItfc/R1NSXaWTw==,iv:6zcXKsjD4bf/tHV7mvOsq/QnO4nmG076Jrj13dzGGzs=,tag:XBPJWsjhBuB7tL2pDETOHw==,type:str]
+#ENC[AES256_GCM,data:0D1/5rLWPZHvG6QX9ljz8njjS7mOYmG0BXpT,iv:0QFsydNTH3Qu9FnyA/VbO6W4y3dC30zJsIh+Zt2KTMo=,tag:/zfUHc1+fagntuL0szmV5Q==,type:comment]
+#ENC[AES256_GCM,data:US+bnZlEFWhuJUIy9BHiRjUHm/Nm/DTRWnUprCRGFRB3BE9dOg6VM58O5pxKnsEtCA3A0aDsPgxc9+uPXTaRGdVShVyZWzxXJ/pLIPrbntC1R0pTT6CgvyY=,iv:Oc/7R4F85K7Z3lM4TcekmyDewVtb5bt63zx6rr36+TI=,tag:ZpT2f816KGDLswSs7Bd9eQ==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:+g2BfPbg4Z+xwIVdQJ4=,iv:RerrR4YvN0VD3BO7D0iYeccH5VfR0aLSkonWAs234hE=,tag:a7CKkaY55yYkoVwViFhxfw==,type:str]
+#ENC[AES256_GCM,data:Yu5AFKkVTTgCtlecTRewE7Q6juP3MyKiN0gidw7Wy7uCeQ==,iv:TFQWe6kBGQlR7W13qubnU5zpKtCYWGXjqxBFbHHFp1I=,tag:3QP7FAok7ZDfzAX2kcxCLQ==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:jl7XcAEaKW9PnK7KVA==,iv:fKwyqM5SZHQRVNcmv/4ntGhys5QxfSx8VZnqDS1SR14=,tag:e6/ppixG5kFTvQ/PyKd2fQ==,type:str]
+#ENC[AES256_GCM,data:s4H03HDgt2WbdG+p+KAmiDMwho9eyvA86Zb5Ls3tZpZkjodN4DToxUpAzNAC+U0=,iv:xERUQHySniggGI1jIzaJAs+3Ujr3hrAwC1geuGbJjEg=,tag:cxpGxBcmvcYFFPyvT2bKBA==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:39+fx4TVucPZ9eRuQsgl0zQbhxEY3F2YSBWgsuFPkA==,iv:pOKofQ7MWfiaREHhzN4GpIpGso/2w1I6OQU5khlJJms=,tag:pf0mY18/99rEIIvi78aGvQ==,type:str]
+#ENC[AES256_GCM,data:taL3NRErQFTAUvsO36SVjcg1ngYTPqt8wuubtmYA8MPCwPnEUVIvduoHZNKB26EWGaJLn88KMOn6jvgVcuROnqhH5kxE98c0DmGUwmpRG1LYZg==,iv:hYV2ZI0OW2RrAygb1UWrzJx2Qk673lhQanVtbvlLW7I=,tag:uf2bz7+ONqYfle6cKNLH5g==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:9k3meBU4hIwZiJ72g4X9,iv:VjGF+QVNEciiLBT6tApEd4KyXmFWT2ZDziAR/O6MGWs=,tag:51IUNnTynXtwgm1HL1MEeQ==,type:str]
+#ENC[AES256_GCM,data:An8vOlWWZ/fKsUrRgykVHXaf+DtuW91fTZfh7kXyPELw,iv:mpYKcNuwz1iihEf2RfmIJeEsXKKjI+HCpEotp3Lal04=,tag:g6XN71MkxzPHLVB2buQ0Hg==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:dEmyNA/+PjFvS/qc6ypO,iv:U+ZBASzG2YJPyQ8u4CwGlr/LPASiR2QVPUllCbK7dRw=,tag:gn/jfhmTzhkx38dBO3tzjA==,type:str]
+#ENC[AES256_GCM,data:6XThJaIeZsSlZtR0ZrD25AsvglAOL0tBIKsxA7qId0FeCLcNEeRWDe2WvUe+QeNy/ABfPrMd0PJnWKAhlyIcXIIydsWz6fZMFvcVVpkqEyA=,iv:3f1vcsRTprtjT7kjZbJc/Jw9RAwRMlBZQJq8PGkWbEo=,tag:1mW9bTK+368XigtExwQyHA==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:qdec8VZ1CjdNHjVYuWWQ,iv:hENZTZVAkegmW5dJ/EaTv3VUw0iwQGYAaQzdV2tKIwA=,tag:TSFc5dLXDsfr7mSPZK8UfA==,type:str]
+#ENC[AES256_GCM,data:dKsXJqAJDW4F7EzRg3BPC4ECXV0pYxNun5QFsIre8l20kZ7XhNRW2JEHZD5NZcNipxu6ZvZ5qrF3eYUod1lrH1CezFFTg0ZRXZjambgFGpOxgu5NmdR6,iv:9p3sAyQGeqA46RP6wSY5FbJwOTLsusORL0prXhe09Mw=,tag:/DEkQ+6fCMhmOsuRPoBkyQ==,type:comment]
+#ENC[AES256_GCM,data:1XAOctrTFty68GplFZP3n4FOR53LVUCPuRBKgMRSb8gCyMe/WD+HL1P9I4nr6uCgsSZuF0qjHRCktzT+FDSnKuv1HF8Cas4dQs/7Nc8I7WGqLMWZJNVebQoWHGOtuayXGOd9AWGoBsg/GxkeOWTAKGEsy0iSAFCjuPoUiA==,iv:D/8T6yD91K3geD3MPs6ItusbDp/AXKgISkBl+Md8ZYw=,tag:KuyLCkbsUhEeoK+3mE3kqQ==,type:comment]
+#ENC[AES256_GCM,data:dE8hBPwGaVNxAS3V4AJOOmaH3Mr+eIa7R6MezuAKsEiILCb+IyHUaiv9McJDyGeMyMrpywdpcdK7ia/UBCF3JbFblJ28p0bnkjevel2SnYM=,iv:JCC74EmWBNWzm+1LoDE5OTGYDWloFasmZcM/DU+fGbo=,tag:0qt5N5HNP2ujtQi3F5nLAw==,type:comment]
+#ENC[AES256_GCM,data:MEffbMFuleHDTdVkHDkNxVTMeCRXiy82ISl1awTE1iIRHOvk/I/Vf5RTJ6nYOCDZVpVHpYyS,iv:xOI/L7TygzlDWqdaQtR7t9ShHJz12s+mRiBwjT7iUw4=,tag:Ob8EMRxAs7T3pFxZzPHUuQ==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:vcgoz/C06lBf/kCk,iv:fC7ecqQEiZrWtvg0wVGwxp9iOcJf3SaIH28En2U4X0k=,tag:P01mdnUK838MC7wcJV01mw==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:tLe5ZZNHfh+SiWRZq/PcV0Q=,iv:XwrU0NNVoKLlH3bMeoHtzloKNHVZM0Kr3w/v/+MqCjg=,tag:SaNndDXUhFRxjBe5UunotA==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:V8iXQGYEhDNuxHOk47nPNZsXfXLaVWrjVgFgzltB6JA=,iv:A7tFAK42l4YYJb+jr2HGuPKg7hHv3O672H0HBwVJcKg=,tag:lP1G+c8TyD8uX1qNShFPfg==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:wnn+hSzHjK/4d1YidGZy+GdazbxN2vRwmRdKGDCfswW/iZahv/9q/A==,iv:VOacJAAlmfg7xYu7TCL+mEei8YbPDz9FIeQ9SAbi9DY=,tag:HidvKRak13jfwzR1HoCScw==,type:str]
+#ENC[AES256_GCM,data:wEEnOIqVSmBfF5M7HBFCT/pTAnHlYLrwSynW1B+U/gJtmjMlvik1cRmf8xLxWxD0Vj80k0rHTLrJIc3G8WiCHw==,iv:+nc7BleCaqcex7J/XcPikshJvlIuWu8YhpkBfFsuP/s=,tag:Z8BD2AzR0LO+S4qkL9HCZg==,type:comment]
+#ENC[AES256_GCM,data:7wh3XpI8qNkmKQGt1+unKUJMpGeguX0H0ZgRtqpx/lzMwU3fz8Oysiu/nZ48BsEfxwlEg46FmRc=,iv:gc/3nGMdmvePrgma0iY1O55IaclADkH6RW4e6lEEm3I=,tag:J9dkmOeGpwV3MH+jcFXT5w==,type:comment]
+#ENC[AES256_GCM,data:5LrLi9tniWffFYQgb4zWaNgXu5GQxkH7ig==,iv:WPlhYgrjAYSRLyM/H8nHgFhQOSMrEFKqoan5pvDeLoc=,tag:NsU0Hf7rcMkTuGhZNlyqyg==,type:comment]
+#ENC[AES256_GCM,data:i6A3xB9AFP/Gh6kJWlKvdrMTPprs2Cz46x/1JYqcMFU7mKT4srquEuQmp97MOYhnVviap+RWUqFv5xAfzpoVbp1TYXJof+36ELnwiVw=,iv:FeCh705UIz6wIAxLMPUIbsX/4W7wRUFNdzZfGnSZfuQ=,tag:slRJKV2JZUC0I24BmFvP3A==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:Gi3RUV5hEXZR60F2+LWOX2/WpetuSY6JOEegWD3cZIorYKj5BIZX5OFf+BICc8iL,iv:SuZQ2NKNkgopnxUEn/4iW3+OHXb+Exf5qDwVpQnovCw=,tag:GItxKS+IlxesQJzlWFvhQQ==,type:str]
+#ENC[AES256_GCM,data:YwYu1x867tgGjrlY+hDv3q3Sa+m8V3EZjmCWST9E01W9iAK2NGltOEpAUGMsFWLTcDFWXcmbbECQjSzxA5BOsJhpwKTADZM=,iv:yUVez+ToSU1Y4w22i0gj1jqhymNfD5hjQZg+Zudij+s=,tag:fw9NLJ3NATatsP/pQM1iTA==,type:comment]
+#ENC[AES256_GCM,data:KbHVXQW5R5IpHC1l8VNKkoR/FCkr38nCfXRHmpnwtLQspR7g9B1C/GvkbFZ8qQMfKVg5amuD,iv:NrLet55bvqs0MC3GkcEx3JXtxiEG7Vdb1z7b8nVeD3w=,tag:GhlQhAoKxzfihsl9nK/XHw==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:ePj2p+wXfA==,iv:oYgFloKOYdZWtGHuTa/VqzTpcem5twwyZ23gR0aSNRo=,tag:Dkdauz4cL1yo/YxBOuUW6Q==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:fn2HxMmqg7SdQJ/1J0cdvyDP4s8=,iv:/8nzL978OHmngTju56MmlMbb2cO0xmoC+0qRiR0PCEA=,tag:8L5+uLYMbWUfCyQzhNHJ3g==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:5TicMFxHiyOwD+8=,iv:qlH4b0X2F6C7xVfsTGgKpVCoXnSZLNwNf7k/h9kMUJg=,tag:1dkJ/Z9xoMdedBUH9EbuMw==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:ScotpH2u/+gES5RqUpgJ,iv:Z32AnVblpxQ73CRz7nV3pF6knFSEexggd+19EcSZRm0=,tag:eFAjtSNIWqsbRXGDnb7XLw==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:MENbk5++fk4fiB9KmBa6aScPobLHfvSZzg==,iv:raaLKGG3PBf60SlUcAqi2Q7+TFJ0BOlBU36pbvJ736I=,tag:hdbHtlzbAqputdoeIW/UJA==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:zpeoFggOIaRF8T1JJGp2AXdIjQ/iUAAc,iv:Ieda7eACUfvJLXkOf4Z4eCd8JeROz9hroz2FAWfL5J8=,tag:j5JSto+e6xBGQ+jN+rRuRg==,type:str]
+#ENC[AES256_GCM,data:Ykze84wnwV/keHQo3Wg7NHqWGVlYZ7ftKHWJk2vEOJpOMxzu1Sc=,iv:FI3n4orsf2tNMRNXLVn58ieBhReg9nG6ZKFFOWs/q8E=,tag:SJRlhaQZf0irSaCwGQwD7Q==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:eGjh5aKdA5LWYuwy1I8yZeZAM3o=,iv:ESxs+kTIvvV6W1rgGetGK91oyrUAassdshm+9z7GLeo=,tag:uq8ouVEZqyI9AdBffdY0Gg==,type:str]
+#ENC[AES256_GCM,data:lbaknUXGsn4F0GanQuw=,iv:kpZ7ta8tgqS37b42MN/E1XhJ2Y5YoZayjViGGUw+Xi0=,tag:OGpoaQwZznJ6jYeB2BvSzA==,type:comment]
+PODNET: ENC[AES256_GCM,data:B8BWyVjAJhAIYzvA5Q==,iv:QOexi2QwzSSHUfw1SvH5a5JD427mfuSXYEkdoPgjWEg=,tag:CvSyHFD68n+X49wdzZHLaQ==,type:str]
+SVCNET: ENC[AES256_GCM,data:DUIQ1/ncTV21MeTsBw==,iv:6cVTAjM2hp3rU459EnHwLnIVmtUQmKNKvBvs7Z6EXtg=,tag:KSyqIqJG9h7NyRRjiNM57w==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxZlcrQWVGdkk0djh3dlRn
-            NHdWUXNOM3Y2WGFiREVhakFhYThyVzMyazJzCmUrbmhPUFpuaitNQzRhbWtlZ21k
-            OFZRTXBpSnN1VEFhVTFKNzBCUGhmSGsKLS0tIE9WaHVqMm41Q0lsZWdwd3k3OVQx
-            K0JFTy9MSTFwcENlRnFscTF2K2NMaUEKV330Ds9tcVWvYWEx9VAQuH8jnw6cJ9jd
-            wUwInojUsNeFVOPhmlSrnHL404mxJDW7Lc1lwax5zc/K4hDRTkAHYQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1NWlqcnc5dHk5UERDZnVG
+            ak9pOVlrcUlNVk1LSDhDaUJaL2Z1MFhqMW1zCkFFMEhuWVZuckhGZXFLT01tb0pU
+            TXl2ZEc1aHhRV0NIVEF0SUJUaFBHRlkKLS0tIERqUGVZQXVsd09HN0Qxb1VQY3lu
+            RUwrcFlRdFV6djJzQXo5SFZybW5zWmsK9tlTqfW/Tzmz2M31bJV7phzS2lmyhEF1
+            o1BjJ9sKWOCjbLsxz1Iy32ssRwLW20VBBaoct23msgAPnR0qf1nwvA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-11T20:06:17Z"
-    mac: ENC[AES256_GCM,data:PVL8XDP883szWWKQNEhDwNezh0kUDvtCm4YS+909Fv/Bw5RDBRHfGq1vD1tveYcBIT6q3xy9+RcWHYzx0PQ7YuWsVCU56IspDj/FJLadM5O9ARn5LBOK++mtgroQEPqOepDtRIhFFqPEtAJNke73mTGz0YDmNfoH7NQO6MbqfSY=,iv:am2yTwKSesjTMX7OmLD7z3CCkdXa8vBeExBgsONmvjk=,tag:vLsnsx4EYmNuvikaPmzHxw==,type:str]
+    lastmodified: "2025-01-11T21:19:03Z"
+    mac: ENC[AES256_GCM,data:iKbLeBLoetkvyUnt46t86cjCMhUMr7omq5yxm9AbURGfuFJsrQRVz9opBqyldLW9r5kCdX/CoWg8yVtQwW+oB3wLnDLdWDUsV1vCIzWErUhrsLLzQCt+H0yGx8d7BHoHrTxGvejAFcch28WUXPyy805LbeZeku2QIKCuQPtMia0=,iv:KEtBP2jbWZO5/UVrF9zrBHnTI8AGf0dgnKs00CIu6BU=,tag:TpCHTGwup/siR1i0HYPg/w==,type:str]
     pgp: []
-    version: 3.9.1
+    version: 3.9.2
