--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:taeiKXJi++Fp/f4L3TRytvfPeMVv50OKhMHSSSi99XATemkY06UPtebdjRlLDaUgnkhVJJ5LIygIXYUdZTWAPOc=,iv:4uKsbgp1i+qhBu6HYaJyjm5Ac19VpM1tOA7Wxglhd+Q=,tag:rz9xO6NQNNp264vSCMTlRA==,type:comment]
-    #ENC[AES256_GCM,data:P0pDS3fxW1i/PaN65K+W2b4lffgi6guT/FH2iimyV6lbE7UiwAXmk7gYRRA=,iv:Gj6/sJmEcIJNUAwirObTr4Gm9Zhb/BxXglVVTy6N5Ng=,tag:Fmf5O/TJfqQ10IS8U6T9NA==,type:comment]
-    VIP: ENC[AES256_GCM,data:g//PIuvbKx2lrYclqw==,iv:+d6fMDuYmM/AEOkGugekq+0re8BVuGqSmJv3NvnHtkU=,tag:uFmoGZFi5lkOGGMV7+d1yg==,type:str]
-    #ENC[AES256_GCM,data:Fi2mKYGMs2y2vhzrEtAYro/PIIjsrYY9YFaK,iv:ZAv8eN5k1456Hr0lYb4No3s0uCTCv1TgEUPCkKTJuCA=,tag:LsGMrs8FgVWW7iV5F2GKYw==,type:comment]
-    #ENC[AES256_GCM,data:jcI977Nx0wLsUj3xdum65ogn3G4PghcdFw64nLwlS3r8SHwK04t6qW91CA6px//DXUp5M/KwCKya7VMio6BQrbsEy8br1cf5itve9UzGPcZGzpZh4WjGAgo=,iv:CzhK81F7eTjCmdea4DagO66huCHdqQHuwbmPobSoaWE=,tag:J0Qq6epBmrk2Zk02uM73AA==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:EnwuEaSsKCKrSIdZwAc=,iv:tluQ+or8nk1cD2N9fZEk1M3P7STX+TacVA62F+qKFLs=,tag:/afgO2XDUMmgIL7VP327UQ==,type:str]
-    #ENC[AES256_GCM,data:PgN0Bb7qHxniVVLMJS2R1fte6urHXTT4gGzy8SLhPqgU1A==,iv:JRgB4ueJcIG+fwePx3AAvUtrWCOjkpIUMfGzTqOIS/s=,tag:6w2xixv/9uko0rELOBHIgQ==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:58R+w17BjnbqcBTqwA==,iv:Dmpf+p9PAcYVWHvLhUk4PKdP3KnmorU6sA9Xxe3AVEQ=,tag:ydQcEHMoVBqkopXcWASwOg==,type:str]
-    #ENC[AES256_GCM,data:3EIpn4qCpJnQMI9MEyMg1QARcizrJabKFY4l3f9fRDUArUip+hl1WjyiNywKj9Y=,iv:BZ3f7099gy1K5//l2veciG/OM9BUyHExOEYKfiUUhyg=,tag:2MrM0ooP2aM9HsrU+MOF4Q==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:Km9Yxt55A8i9x0dsEerJktBnnhP7eUucfSN0ELHjWQ==,iv:8resUqTa2B0a5IvUCtP8V+ovMvAbCMHcIYnsaiUHjIs=,tag:v3rzWFP8MpweqV+MWcGteg==,type:str]
-    #ENC[AES256_GCM,data:0vwFSiBhKKxSOyjAJYmeabhjhMiYRZ4/1vZf9nDR5k2hT+HNWTcEYI1oEZ0Xv/NQq44PJ4TX8XDGdthn8gCJeYF4Xi/WI67KWhaRGSKSiIlQgQ==,iv:2paCMIwV4rxgPEXdnhQw6SAeNUwamD8a5QcwjuZuWz8=,tag:bAQ/vTAZFn0BEzbeO00PmQ==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:ZwYl08Wx5CYgDwRjXrCy,iv:bCeM6ayO+qTikKlQBasMWWpgoU6uS++OQlBDMz1uNuI=,tag:peNC7QGB4WTfF0DcAvP7FQ==,type:str]
-    #ENC[AES256_GCM,data:EuK4Lj5JTPe31hxHbQX9ZC7JJ+hD9JTTdhcKuC7n2x3B,iv:BjXlClnhtPf2JHWEUorZVFt1If4wx726ZscpcKOQL1Q=,tag:hdY7anCIiABzsMsDOwtR7w==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:zkAXBOgN5FKBwzNPW0c1,iv:4bzBpGIZgtQfCF2Lm4M35mhtX34ylO7N7LXsFej0ca0=,tag:tlUeHY2frGUtIGHb07ooNQ==,type:str]
-    #ENC[AES256_GCM,data:FZIgfprc0cAX9umgtQZpcxAWjPMf5hmXbUWUWXsek+9ISk2IYHLEGBWLIvzUEwHZUIaxJUE3sV/znx3iC9t8OD9do2LJLNlgqJVawQhtGtc=,iv:0bgxgzuhpuznboDzXNNMSSGU09JAxD3SNAO//cE6eYk=,tag:PzwnZprrjp3SnCVnZGhsDg==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:KInnw+2JQOHTlHdS1aSg,iv:kFQk4iwIV+zzwX6p3fYZfZuOS6fDQtmWuYparrrKaf8=,tag:wLYmLB4ZtHtSNvNtU75hVg==,type:str]
-    #ENC[AES256_GCM,data:cunTcDjsCoeIccsNktbz3HEn+fNPDo4HEMg8fgTvY/A3EEHUrQLjc1Zw/vv1MKeuEbTvDUV2/GtEOUiKjBie8PxTQrhcVq2uu+98R2O75N6BWfrTxyY6,iv:zQDM2sAtsU0jB6u5Bz5WshRQrDizqXrsMjhkdZCHSwI=,tag:zubkVuMwhwMIbQnEqCYo2Q==,type:comment]
-    #ENC[AES256_GCM,data:fUnqTH5ZUNFf2ZFwFRJ+hprJkCjOA7V+sa04pZ7U3/MrkNZRdKeRu47V+a2mFLiqtxZX8A+DxWRE3UuCQebLhPG8euXdlbtTjKIAsDOv/9MFFflFNSHAsE4o1E2nHG8qdTDZ052NBKU+QOPIF3HfwNOlrbk9rHeefouAgA==,iv:aaCyO2QHLeVmlyO1q+sTSt/Hnz1Se22VMp5eRY9UWq8=,tag:w1vyn2fyHchgNldmp87WLQ==,type:comment]
-    #ENC[AES256_GCM,data:E1H2/XBORO0JchBMWkwrFVARU5oQgCh8rcG6tPXG32Pqul774aN/0FUuI208jxzAqGQsklJtQ8XLOrxVFpZtk0+UWo+odK07woyEB7KUfzg=,iv:BpzhRxs+A3EHPQI+0ttlzwaG1uRUc0UcrDU9k+vAVaE=,tag:bIpltxSfD9XmFuYEWhQ3jg==,type:comment]
-    #ENC[AES256_GCM,data:h+czyHsEhr044wjEE7c1gXDLs16ksGXcagtElb5ef517yGO68VDIS+oPBmQoSmdeataDxsU3,iv:ZfVG2frkx6HfDE9oLy8APycHNObvOMcFHszMoNXbfns=,tag:w7j/uYqA0mzIj0ZeVUUT+g==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:7xj4ScZjQEFDUXCS,iv:OvED15129POrPCdsNT8ZvdpOV6F0gPSuldMoQ7ebS90=,tag:CiKmGOwMUqXtutVIbrnkhg==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:aC1D44C7QsHpY5d3pLW1gEo=,iv:ZrztKGp+WFJtabo2LziOjtP+7bUt7jF7QuV+OXNQFgM=,tag:awgihaQX6KlwtTD5WFPMMA==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:3dXATkf8Gg/iK8sCviuWNSRymvWN3r6MEjgHnEIerT0=,iv:5FGtAzKVHagZpQz9z+6afO02PKjrsyadWn2hJpSopu4=,tag:US9lQ/6WSWNKX7y87wJTQg==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:uMGe+kSN6TNa93MwAU238xfZ9bRacvHfCgzfvJNpFyDf6QCSUsD7wQ==,iv:aeboqTwzM8dIhu5rIN1mywJMzK8LyBvBa4I+Fn56gGk=,tag:1SqHKRZdgXywwQPz+xYA3g==,type:str]
-    #ENC[AES256_GCM,data:zjjbhSfWhTLxpsqYresJdioAcNOpIYH9F2WZABZfka2hjXDMxaem/2bqpGJC6oy1SC+u3vsqi33+L44kv1tZDA==,iv:MUEE+Q9Jy1vK+sKwk8m2FV1Re7HFeEpyZ9XIxMhHBxg=,tag:dlrEuGski/FcojJxhFm+/Q==,type:comment]
-    #ENC[AES256_GCM,data:Eq4AgwYxheEGyyXADsFp9Cb3DBzlo/DrroSjHj/KtJqc25Ldttnz9NDfFCI9uUrmHqe+D3qqnyY=,iv:c4rp9HOHkS1Lw44OolQy6zbHkuuV9UV0nUbld1N7T+Y=,tag:2l5/r63y2/eo919BLsujww==,type:comment]
-    #ENC[AES256_GCM,data:JcdlXmMAgAHlKHexOUGW53bfov2Nq1pb7g==,iv:hNrhudGG34kbfepZXwoKAiCLcr9v44psPcD3QT3oWgw=,tag:hTn9xylYDoF7lS3pnP/wdQ==,type:comment]
-    #ENC[AES256_GCM,data:qK7TVM01XQNA4FcuOwj97lVT5ytlfrQawu0X9aeHrEdH72oAFN/rcpArKh9s/68maJjUXX8OsyX8dgjJE5ocu1wWWBBerPohCiurMjc=,iv:zgui8Nb8/0hWlJymbnYbr4Kl46FIdLTmzhF5P6f9fxI=,tag:yDXROPiTWwUfed6T9capDA==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:b13B2Rakwzp5cOnHCyL8BL8s9s0xdoziww+wGKq5FIrr/+ICaEH2GXDRzSOx/8OV,iv:6S3C12ujqKUbnsTQw7SvjuHMdUFEZ0NKxrKZnoBmY+I=,tag:92yOha4dTTrv0f+mA7Go1g==,type:str]
-    #ENC[AES256_GCM,data:7iw9WKHpw/cF/bQK0TkbpRD7idXxM7wBP2tP/ELNVII4WmyfXVeGz+lzilUIOOEgMNd7R4CmKXmZCCMRMBvTcHtDY42vnc4=,iv:sAkM4toSnVI7c8i6ZaCyp3CicUO8aseYZZUEwjqTQS4=,tag:oEMm1wk4Fw9+58GacyF2Vw==,type:comment]
-    #ENC[AES256_GCM,data:W2rsUbfoTGXw708nKKWO6Uz/GPyzy9fur645tDjYTVOmCeKMPQOO+pmQ23OvGENu3zrPig3t,iv:0jZgstO+ttCXHJbBFhEmh/87f2oyyrlca+gg0Ghhlyw=,tag:RQxiCmy+4xm9O1gJF/bPCA==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:5KoTTx4bKg==,iv:XD7HMJ+ezfiCk9c/Go7n0wvlXNjGib4hPfqG8r1FWRM=,tag:xcEFvW/rjRpA/PhcQ+JS9g==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:QrwAq5t70d1rG8ZEfkTmu8NJ57E=,iv:SJAAi4F0KFi7XPnBhmjs2ssSsiiTWy4g5cfVe9f//YE=,tag:P/a9DFsnyg+9EQr/rjitww==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:/h58WlzsO+2euEk=,iv:CoHwmftlbGs4gFNwsM1fZ4iv0xi21JuKBFvCZsqeloc=,tag:2/t4aCaOHnTFPXYCbwmrJQ==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:yXrcvsRImpAjZzTf5qn5,iv:Hd+/IMOfq3Orull0U3ujpB2sLCzugxZ+DcIKXs52xwk=,tag:lySoBKTjcbq9PqIhfTEMIA==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:l9/NeC4Nh5WhDJ6aDO3VLRs8v9Tu5/BLqg==,iv:wiGbTa9mKfxVvVBYHxqnVIoEaxfO3xwgrou45tC8T+4=,tag:7Wn/Be3iYjSxn+cmtX/iUw==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:JzfS25WaDn5TjdC08kHPL2AppHgk5htA,iv:yzpt/ymJKyb3ubFykx4gXeWc5GJwPUYMDmrwbgDvMCc=,tag:8cuM4BKulCCGRHok9fcz0w==,type:str]
-    #ENC[AES256_GCM,data:J/Jzg69FfeCBhGyqC3CzsWznmhq0zmhXJBw1j8+uZuQDYDMPhHU=,iv:iMQfQTB6fx7bT4zZveMoi9c6d7Ya7AKKQePr/fSdsKg=,tag:e5GKE+ASYnetVZUivi0Igw==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:5R9GZLLU/u4hrNybbWk+N3Qmn9U=,iv:6JxsNFFDalbJypm1B5g9Oz6m7bLLy6Q3uElx1nZ5sWQ=,tag:GpHSBBkcCB3hPvD81kcq+g==,type:str]
-    #ENC[AES256_GCM,data:hga7MF62s9nsyrjWvCc=,iv:UXm1WebhZx0pI2SB48/v2NgZ9MeEWyMVy3kEEW8gA/E=,tag:ikOUUWUISg2HH4Jg+hK2+Q==,type:comment]
-    PODNET: ENC[AES256_GCM,data:oBzLQGGnaf+uC0OmqA==,iv:WCeijHysxC/mp/T9bH+0GMqTLRbhI7iFTnB9KxSlZ+g=,tag:U0BVRXrCzcvKHCwJr3pZwQ==,type:str]
-    SVCNET: ENC[AES256_GCM,data:W9uPmadxn7xO6p3JPQ==,iv:GzVqM63/bOB8kogvfKpbYeWm1CqdZ+iU8kWnO8KLdIo=,tag:G9e8OSxkm8ku7Xjps2lBVA==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:wqm+Dg==,iv:126tL9RGIoYi5IONwRPoebC8xF/zEJqjy46GejX+NyM=,tag:X9GtgroP9r8j2hZSh6mcRw==,type:str]
+    #ENC[AES256_GCM,data:CTFC1zsWN18kUe7JAc4ZbjIIdbh8ss1dLMKtsIBfC6vu9BO6NJ6+VmU5qn7KKckTHs0/RKGgJAbNiIbwK8JoUc0=,iv:zV3fXFAIVt0BhXML9VYJKS09U0/AYbAFJ99s4UdOiv0=,tag:GbIcRWfKmXcaT/SqPWIySQ==,type:comment]
+    #ENC[AES256_GCM,data:8Zizy+OGaMTaR1CmCIyCNsRlry2Ypi5RV/HNwjA+IYRoO4KDgfBxhFUAwEg=,iv:iuzb++ZnexWpx+BLsm+f/yCDoaQKW8+8736mG2f/v+U=,tag:oD88B13OTtc/Drwpwndv0A==,type:comment]
+    VIP: ENC[AES256_GCM,data:XgfG0CUw/Qq2SbcmpA==,iv:Z2MHAE+4maGtlCZyfk5jl2pmQMhN6NsyLA6Ob47MDpg=,tag:5vLY7Tm4gv/deiTqWbTV5A==,type:str]
+    #ENC[AES256_GCM,data:B4A1Ec9qHpmq2zSP6vvVh9ybvTrAdV68ntZY,iv:kunhZVK2PA1c2SBLyhWT7kHEqDDhb9BJ5LEigtAVwiY=,tag:NuvAkCMjK00h/r2+Uuifdg==,type:comment]
+    #ENC[AES256_GCM,data:rvCA4Wc+I17i3ReWwL987C7lIMjrZiH1/JAEXtX92Mrl6O4aevGeOP8wGuVbs4gVrX3ibKhphaj4wWU9P+4XEYQisYjssuH33pEZ4hdJ97wE/zY3Jt+DGWk=,iv:NE6opCOKIJp7eUZ2b3WlkcFs/YMukvC8ok0EF3tZbC0=,tag:ffx90adiolqZrN51mLVFDA==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:gVfKK8fhMA0QwIsJnWw=,iv:UF57lqp6JQBWLIbd486rdAo908GWX3VjkgkUpwEG3LQ=,tag:47rUe3E464frG61gdTnTmA==,type:str]
+    #ENC[AES256_GCM,data:vuD7nOEC+g6d4XzebSpWZ+WULEBxPLzN9QugEhj5g0ql2w==,iv:fBltWblypmuLvvmj6O7Joh4w2BHS6yHzHJ2Z8pfX4GM=,tag:fgwQTLAXnTkKysbwuHLjXw==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:8V4X+GTdiXpoTQOoaw==,iv:CZyRwbHJHa3ESevY88kHFdfJT8TTVPysbjZtfoeCwzM=,tag:pTPrub7YQkRSg8O90Zf9Yg==,type:str]
+    #ENC[AES256_GCM,data:LFNlvwvcVUulXWyxCrBnlDMv7oKlAceqoYx49HhWbong+Z/sRwB1b53jY79BO7I=,iv:eWrgo/zDBWIngAbjSF5wxVFNO53HM4nUa3DDDrZUeD0=,tag:mOI+yrQtpy+xwa2Z7S2K7w==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:68XR+zOl6no+pJ+H98/mFSiSVMcbRzYW1fdMvKOHvQ==,iv:QbXWit8ktqMVKURQeVDVNVx4akeBmAXSq5RmZsM+Z/w=,tag:7riPvpKt9k7MmYpRdU1zoQ==,type:str]
+    #ENC[AES256_GCM,data:lJn1rVH8TfnKZ8YgryrIM3WGanIblcpV6jRucC1wCGEm+s8pYxL8ExT6LISs7zUKEcvrkmZ4w4GbojwvDlWy7kUtG2JU6d13POqaxxHRNOPfPA==,iv:gqwDPFSIe7cewtg0MgetoDsQXt8Bqjc1jhLSWB/gYL4=,tag:vy2/8V3kVC0wHR9FZWzrNA==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:dFwyvYqPsUacHORKBKnO,iv:v72eMJpsPouXHf5LClgc5lyxrkgBOKrpGq7jhJj+Pqg=,tag:nrnuCnB5lB0ARSEBnbS0SA==,type:str]
+    #ENC[AES256_GCM,data:rqCIRMh7a6ChaFRpPFS4l+1mhoieaALXhiyKs/sL+r6z,iv:ewO1LwtpqtWKglkprCe9cnrNhrXalpbyUezS/tzpVCU=,tag:S2QiSGKZkDgl9TcNdU15eg==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:vI6KjLDa6eR404nETMDL,iv:18P6zZr78Wp0TYdInFJ9f0J19FJaMSazfgy2VvuGjkI=,tag:e/qcfIPgg4FkQ/Zon+c9vw==,type:str]
+    #ENC[AES256_GCM,data:1PStM7BCmE9nbTjlJ4E9/2GWDHkZUW1yzGFNrXfkLr+rSIyQ6mXDRBKwr41WGhmdJgsZlxIKR4hwzTr96F0+Ws96S2auQz1KcyArGCI9bFQ=,iv:TYYBab6a/eJkFZZfoKOCwNoAS68UQ/VeCPq1MT1hMd4=,tag:tl+NqG1D8RL3nnYzQm/Kbg==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:BSVh0qocNOZzMCHIntCT,iv:TwlUGTQq8VfIbK6ekZKqlD7f+lw+eApnw2cbnlwmpg8=,tag:i1ve2BtJlj0cEJRACHoDjA==,type:str]
+    #ENC[AES256_GCM,data:Eu3FO0OUU8Kl6fRFwdVAFK+P+jx/6yAR73JqRnqAg84e+A2rk0X15wkO/eq7xspjqyUZVjTlur/YETjpokHo0/m2Xnk6kt97Hb5LG3Myk/wh9yT/66/h,iv:osn4qh2P6RNIueDjUP+MyOBCpW19s1e1v6QqfyRz/0o=,tag:COOzJpOdwb9oTPCbYhTkHA==,type:comment]
+    #ENC[AES256_GCM,data:Yb9b14oH2wJvKJBgmR6g/rnUOPXxYU2KK2b/oJT8ZXPtROEfJujTnG4R59al2I8I+mFYYW9iOysNvKSjxdX9hSHLiEJfIW1ovZ6OGRINbH5GqOIz9cK6qKKS/7qCFFgOFj62xJi207SvjLVGXjOFLoBFh8GdxAyM7PUnQA==,iv:olL+FFVAYul+XV7BHw6qOG5DOulXpJT+uanaW6eM/nk=,tag:z9MUGeT78c+iyX+hyT0lgQ==,type:comment]
+    #ENC[AES256_GCM,data:xC2pToUK8s3YCILwbvo/zJK5GYk5DEtmBpUHRA+jHxRR4Xb6iEFxHg4ayqtHn1Rk5ViK+CZu8Pp7PCBArObFbxt4x6IQSwZL7lg3g5NqpbU=,iv:wJ2LvdpvPQ9t1JwUB+87A5kL3K1CaZFqdsDsasAv7bE=,tag:Iq19j5crfmiaFXUM1a0hOw==,type:comment]
+    #ENC[AES256_GCM,data:Wk2F9r+zgBgTqFSWHSVwd0B1Snl4/a1BwLB6/8fK+Kq9CrGLX4xBUH5bd0PWVY6cZPH4XCao,iv:0diAKuRWmE5gmz4PC7/9QdbW17Xz7bz3IHg1qYYtVpc=,tag:KW3+rkx3dcAgdml8jq6ctQ==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:ezpVfNy/mZkAjO4v,iv:yoqkxqaqaSjem2Fpylyrdcr31YEiQ7o/QlcdEzUqedo=,tag:iINq6DdJ0fG9CmIxu+b/aw==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:xl95OBCMPru6ZnI6inyjYRk=,iv:cxFFzAnODi3VY/EgBGp0ebmZTLSBiox4fJC1ZejlV0Y=,tag:BgFPFiIFDxBZm22IVJm/0w==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:73YKZHKpCzeVG8LWQRdsLolro60XorJzwksaLfJqfV8=,iv:y4T6zVi/VFEcOS36RvedTyce8zcDCLDJGE66uiu0JSg=,tag:L/qE2Hpb2DfgFEJWjKM8kg==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:R0OdK90X5GLAeeg4cE/tHWGqFH3bx131/YphN0A1MP8QxB4UeNCSqQ==,iv:V1KHx3q3BUxGLAFm8mcTScTf/tsMrb4okTpO952tqe8=,tag:x2VRkAxg8SWa3Hila8M9mg==,type:str]
+    #ENC[AES256_GCM,data:h3Q+LmQ1hn6yBTqNMM5DGywsT55w6fi1M2nCxNjxzxX7nLPP9j7MaEx2YUeB0ptnLkiJd9Xae4F8+cZ0dbfuQA==,iv:EWi1zMWiZfPzfCnFceIvXmpnS68ZoGAcwJ+Jipnw5Ls=,tag:v1Ea0OD6jmHjeiDDVq3+HA==,type:comment]
+    #ENC[AES256_GCM,data:qedmt2CtE15QC4EAPYhbwGhX8rH05fayZXRBouyTJUOOAum6t4yKdwooqxTMtx/S92UKQU7jFLc=,iv:aQ63oFr1Gf72Hs7ye/N/5MJezWiCa+j+Vz9ngTjG8pQ=,tag:7exN3cH/9eTbaKFclxO68Q==,type:comment]
+    #ENC[AES256_GCM,data:UaqkyuKGpEdByeR4MNlxgqSuOLJflu33Vg==,iv:kQbtMmWd5fjRqw6X68art8P6BwArpDwxonev/VQ2ViA=,tag:Q7zsBfBneE0sZvfCkPrDaw==,type:comment]
+    #ENC[AES256_GCM,data:kSJob/bn1A7GJ9s41ilX5TU+sBtVPzxb2rbApPFOBBKdyfZI4tZp+AL2xr5DIf1Ie5KV7oVa/1nf2L2EoYSm38Xpt38AeiNGP5DGcmw=,iv:h/0O88mr7L1EX7b2w4/C5ZRJhIRZDisWUn/8S0qfKYQ=,tag:aYri7+/W4cKAPLCGGrE5gA==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:tBkHCFRrmLSHRc2wq6kCMrP3aH58TuMW8qSX2x5wMW1MryH4x/Svjp4u8b6I9v/g,iv:d+32COx7cjqeYrDovL2DtJHIZXMJ87ABEokQQuyeCzQ=,tag:mcnE3QxE2guITdO8qdmKzg==,type:str]
+    #ENC[AES256_GCM,data:ro8PzMu44xd/90S6aZP1VuWzKUS8k5z2oEu55YXxP6yaD2y6aDAnM3xBtV02ID6ErXSFt+Qd7+q7rO8XHUFnHj5+cb4RsJo=,iv:g3Jthxo7doFV7vkRCdNejDRaTRByihMpoPUT7/5wRvo=,tag:B0pcGtgi4h3qc7Brviu5kQ==,type:comment]
+    #ENC[AES256_GCM,data:Tz3LtDUZYKqPlv0ShlbxAOrYL7Sb8BL/M5frn5d2jkEECddMSwZCieXmBrGgVtvAEahLc1V7,iv:yijE34pyedYpw9zIW6H9h8/uiOL0m0XMUxkZeE/F/LI=,tag:MWMbpBtO7DT56rXD2aD36Q==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:FV/ctJtqxQ==,iv:SsjHhk7Wvl8JqbchEbsTblkNmr3PbI9Ze8s10zDolg8=,tag:+5IhPgBNmycElmIopfFPqA==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:4hnObNrIdLe6BG7OikgcKUuXrrk=,iv:nwFpjfpcp6ckAH8bSnZLhNZuPlPT4mmTFIfK/pnnn7g=,tag:ZwrkyDwSD9crxBZsXOMExg==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:0D0Zjx/bGPG0Gkk=,iv:ojY5wVutxwkTdAQG4BZyPoPPcTRhpR3FYBGq45UHywg=,tag:SicKORmi1YDxTBYudWijJA==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:QnJ2aB24DFHyU0ll3/Uk,iv:Nkxp02Bi0oEjuv6wsC3Y6CIxTvmrSFAwMCgRlEsgnOI=,tag:/PfbyKSe/8rAhvQ7o77L7A==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:P3K3l+Tg5yLNaonH3t8gkjOtLlbFrrykRg==,iv:bcgepZ0Sfov2H8PoqPztge/+SNSMSwub1cn5iStXDvs=,tag:aDWE+oqmlQOIFVs9K2l1kw==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:RgpnIk6RWjzaKaUCj3YPO1hwqUA9jdl9,iv:X/h0y216lLb5Z6EPv7LrRjt1jBcM7p+yfssWHegTB/k=,tag:M160etEziPlNhIPn8r+3xA==,type:str]
+    #ENC[AES256_GCM,data:uiohsyhoCbM6a5G391yyx2SjcWq2YZcvT8kNWq0CwfcfIIFopks=,iv:dWMjyK50Oy1Iy0vMC0XBdR92PkWQtBgO++qjebJuegc=,tag:U6DH+wQTsHt83qajipE9Nw==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:cjPuoBLSTTpm4DDV3bnf8wuCbTE=,iv:oZj811TYL2i0oI+eCfofYaKLqrEskCPfob3uhplMw1o=,tag:luVkvYa1+odDArKPGcxmJA==,type:str]
+    #ENC[AES256_GCM,data:tpH5RYslDMgKiSrU53g=,iv:SgRLmmBE/uEc96/b6jkFsxh5H5QaTwRO1ZAqMdfLzUo=,tag:UnwcQ/DDmWPB+m4PxnsrOw==,type:comment]
+    PODNET: ENC[AES256_GCM,data:bZDRsqTmP4NbyqyYeQ==,iv:ktxL1OP8XIg5l9wByxv51jA2bWGpY4eYa6jOzwd0QyQ=,tag:T1kSV+8NX3geb5l3vy/TNQ==,type:str]
+    SVCNET: ENC[AES256_GCM,data:IpgIpRnANJkmOQ5aSA==,iv:SPzkD1A6g1Ub+ecZwcbd7xkgDVF26NI1M6jxG/izz+g=,tag:b56wza00reF4XIHsC/5A2w==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:5K1v/Q==,iv:J6SZgaG5ADunkJNF4nt9Vl4s6A79NlMflV9qwvkdPQk=,tag:eYQbegMR4xYOpeJp2YJWRQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBycHhNcmtQR0djZzQ2VkZk
-            a3cvOXFVeXdlN0VERXhjWFdHeDlDQ0dRYWk4Ck05U0xWNTcra2laTkpESzFaRmww
-            K2VMSithK1ZIelQyTUQ0Wjl4Q1BQb0UKLS0tIFN2eWNUeTNrdmlCaGMyR3p2Umh6
-            N1FsUW5RMHFGVlN5Z1QwczFDVzBqZUUKYYTmrGUNA0PgeNHCCEdME/Xonz6FWNPo
-            Zj+/UYBWCfDdqEe/tjrbqd2XWPWu0uSt9wJB/Kb+avyzssd5duyBWA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVeTlMRncwblNjalFVZytZ
+            c3Uybm5QaUJlQk1oKy9wOWRzV2lzWnJGSDJVCnNRWWJYTmE0eXQ2UVl3UXNZVkpl
+            Z25CLzVDRStuanJjNFVFY3pQVEwxS1UKLS0tIFpIdlVxeG5YUW9QNUxoWkwxd0Nt
+            SUt6K3MrWWd0Z1NkM0k1VExrWXZ6cFUK2bVk6W6tgQ8dTVaT6DlvHtxrWHQgDDVf
+            taZV00HBaTSNsgdtIa8Ft7Lwpem6ziJZYGEUXNW88fGNqCkVoYN3dQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-11T20:06:17Z"
-    mac: ENC[AES256_GCM,data:3OW/xTuqhQDh8kE4q/pbEzIbcKFT3+zRjbaQ9W+eMhTsOc6nTCLKW2hmCXA+ZX0JfJPtFSQQTRbxYwPA884nJrxfhb2FoZK/+GkxRohDyuBpPp36GC/+fWC1lTYRYFDjW5yMxtFZ7SXbiTSI1qI0rF32MS7KDITgvMRcUxymkjY=,iv:pT4bH2C1bb1tQchQRo11be9pcxJvHEBViU26/53lwM4=,tag:6M8yGiodBlWcj6El1M0ufg==,type:str]
+    lastmodified: "2025-01-11T21:19:03Z"
+    mac: ENC[AES256_GCM,data:SiAVwZYwrQOH23vfBf5d3P1HJFOlppstJX4Vs+Q9YkbbgBOpCcwhXF56sBh+BpaMyufP8+BnnimgvBogUsX3R55SSIz0sswGjYRAImxC9irlCK62VA6U0+p193Qa94KOIiU1PLgeHJzvTbXS+k+Egii3SLo3zsWvQmphsFbnIBE=,iv:7OlHY1nolMhDooS1I1sQtnFiCBNWEFndjNv7ij2WBcM=,tag:wMBH/Simbeirz1UwIHAaOg==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
-    version: 3.9.1
+    version: 3.9.2
